--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
-<html lang="PT-br">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CHAMANDO O CSS -->
+    <!-- CHAMANDO O CSS EXTERNO -->
     <link rel="stylesheet" href="./src/css/estilo.css">
-    <title>Document</title>
+    <title>Projeto5</title>
 </head>
 <body>
- <script src="./src/js/script.js"></script>
+
+    <section class="hero">
+        <header>
+            <h1><span>Loja</span>CARS</h1>
+        </header>
+        <nav>
+            <ul class="header-menu">
+                <li><a href="#" class="item-menu">Home</a></li>
+                <li><a href="#" class="item-menu">Carros</a></li>
+                <li><a href="#" class="item-menu">Lojas</a></li>
+                <li><a href="#" class="item-menu">Contato</a></li>
+            </ul>
+        </nav>
+    </section>
+    <h2 id="titulo">A enrgia que move seu veiculo</h2>
     
+    <!-- CHAMANDO O JAVASCRIPT EXTERNO -->
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
