--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
     </section>
-    <h2 id="titulo">A enrgia que move seu veiculo</h2>
+    <h2 id="titulo">A energia <span>que move seu veiculo </span></h2>
     
     <!-- CHAMANDO O JAVASCRIPT EXTERNO -->
     <script src="./src/js/script.js"></script>
